# sanctum-cli

./: .gitignore  AGENTS.md  CLAUDE.md  PRD-cli-intelligent-assist-agent.md  README.md  STRATEGY-sanctum-operations-interface.md  pyproject.toml
.github/workflows/: ci.yml
sanctum_cli/: __init__.py  auth.py  cli.py  config.py  display.py  group.py  identity_map.py  token_provider.py
sanctum_cli/assist/: __init__.py  errors.py  events.py  feedback.py  intent.py  lenient_choice.py  router_client.py  safety.py  schema.py  session.py  validation_cache.py
sanctum_cli/domains/: artefacts_.py  articles.py  assist_.py  capture_execute.py  contacts.py  flow.py  forms.py  invoices.py  milestones.py  mockups.py  notify.py  observability.py  products.py  projects.py  rate_cards.py  search_.py  sessions.py  templates.py  ticket_resolver.py  tickets.py  time_entries.py  workbench.py
sanctum_client/: __init__.py  client.py  identity.py
tests/: conftest.py  test_artefacts.py  test_articles.py  test_assist_command.py  test_assist_errors.py  test_assist_events.py  test_assist_intent.py  test_assist_router_client.py  test_assist_safety.py  test_assist_schema.py  test_auth.py  test_client.py  test_contacts.py  test_flow.py  test_forms.py  test_milestones.py  test_mockups.py  test_products.py  test_projects.py  test_templates.py  test_ticket_resolver.py  test_tickets.py  test_token_provider.py
tests/fixtures/: agentic_cli_failures.json
